Bug 409836 - download link is not styled :visited when clicked.  r=Mano, a=beltzner