toolkit/components/places/tests/unit/test_download_history.js
@@ -86,6 +86,7 @@ function run_test() {
     observe: function tlvo_observe(aSubject, aTopic, aData)
     {
       if (NS_LINK_VISITED_EVENT_TOPIC == aTopic) {
+        do_check_true(uri_in_db(testURI));
         do_check_eq(testURI, aSubject);
         topicReceived = true;
       }
